[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/audio.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/bazooka.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/bullet.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/disk_gun.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/crate_pick.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/grenade.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/menu.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/menu.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/level.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/game_over.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/enemy_drop.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/mine_arm.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/katana_hit.wav" type="AudioStream" id=14]

[node name="Audio" type="Node"]
script = ExtResource( 1 )

[node name="SFX" type="Node" parent="."]

[node name="Bazooka" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 2 )

[node name="Bullet" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 3 )

[node name="CratePick" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[node name="DiskGun" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )

[node name="Grenade" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[node name="Menu" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="EnemyDrop" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 12 )
volume_db = 7.0
pitch_scale = 5.0

[node name="MineArm" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 13 )
volume_db = 5.0

[node name="Katana" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 14 )

[node name="Background" type="Node" parent="."]

[node name="Menu" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 9 )
volume_db = -1.0

[node name="Game" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 10 )
volume_db = -3.0

[node name="GameOver" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 11 )
volume_db = 7.0

[connection signal="finished" from="Background/GameOver" to="." method="_on_GameOver_finished"]
